--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,25 +1,3 @@
 <h1>Edit article</h1>
-  <% if @article.errors.any? %>
-    <h3>The following errors prevented the article from being saved: </h3>
-    <% @article.errors.full_messages.each do |msg| %>
-      <ul>
-        <li><%= msg %></li>
-      </ul>
-    <% end %>
-  <% end %>
-
-<%= form_with(model: @article, local: true) do |f| %>
-
-  <p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
+<%= render 'form' %>
+<%= link_to 'Cancel and return to Article listing', articles_path %>
