--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,28 @@
-<h1>Article Listing</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
+<div id="page-content">
+  <h1 class="text-center mt-4">Article Listing</h1>
+  <div class="container">
     <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'show', article_path(article) %></td>
-        <td><%= link_to 'edit', edit_article_path(article) %></td>
-        <td><%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %></td>
-      </tr>
+      <div class="row justify-content-md-center">
+        <div class="col-10 mt-4">
+          <div class="card text-center shadow mb-5 bg-white rounded">
+            <div class="card-header font-italic font-weight-bold">
+              By Samer Alswairki
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
+              <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+              <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
+              <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
+              <%= link_to "Delete", article_path(article), method: :delete, class: "btn btn-outline-danger" %>
+            </div>
+            <div class="card-footer text-muted">
+              <small> created <%= time_ago_in_words(article.created_at) %> ago | 
+              updated <%= time_ago_in_words(article.updated_at) %> ago
+              </small>
+            </div>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<p><%= link_to 'Create Article', new_article_path %></p>
+  </div>
+</div>
