Cleanup the code

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,7 +21,9 @@
       <% end %>
     </div>
     <div class="row justify-content-center">
-      <%= link_to 'Return to Article listing', articles_path, class: "text-info" %>
+    <div class="mb-5">
+      <%= link_to 'Return to Articles listing', articles_path, class: "text-info" %>
+    </div>
     </div>
     </div>
   </div>
