--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,22 +1,22 @@
-<div id="page-content">
-  <h2 class="text-center mt-4 text-success"><%= @article.title %></h2>
-  <div class="container">
-    <div class="row justify-content-md-center">
-      <div class="col-10 mt-4">
-        <div class="card text-center shadow mb-5 bg-white rounded">
-          <div class="card-header font-italic font-weight-bold">
-            By Samer Alswairki
-          </div>
-          <div class="card-body">
-            <div class="card-text text-left"><%= simple_format(@article.description) %></div>
-            <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info btn-lg" %>
-            <%= link_to "Delete", article_path(@article), method: :delete, class: "btn btn-outline-danger btn-lg" %>
-          </div>
-          <div class="card-footer text-muted">
-            <small> created <%= time_ago_in_words(@article.created_at) %> ago | 
-            updated <%= time_ago_in_words(@article.updated_at) %> ago
-            </small>
-          </div>
+<h2 class="text-center mt-4 text-success"><%= @article.title %></h2>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-10 mt-4">
+      <div class="card text-center shadow mb-5 bg-white rounded">
+        <div class="card-header font-italic font-weight-bold">
+          By Samer Alswairki
+        </div>
+        <div class="card-body">
+          <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+          <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info btn-lg" %>
+          
+          <%= link_to "Delete", article_path(@article), method: :delete, class: "btn btn-outline-danger btn-lg", title: '', data: {confirm: "Are you sure?", original_title: "Samer"} %>
+        
+        </div>
+        <div class="card-footer text-muted">
+          <small> created <%= time_ago_in_words(@article.created_at) %> ago | 
+          updated <%= time_ago_in_words(@article.updated_at) %> ago
+          </small>
         </div>
       </div>
     </div>
